--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "contract:deploy": "npx hardhat run scripts/deploy.ts"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
