--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.6",
     "@types/react": "17.0.34",
+    "autoprefixer": "^10.4.0",
     "chai": "^4.3.4",
     "eslint": "7",
     "eslint-config-next": "12.0.2",
     "ethers": "^5.5.1",
     "hardhat": "^2.6.7",
     "hardhat-gas-reporter": "^1.0.4",
+    "postcss": "^8.3.11",
     "solidity-coverage": "^0.7.17",
+    "tailwindcss": "^2.2.19",
     "ts-node": "^10.4.0",
     "typechain": "^6.0.2",
     "typescript": "4.4.4"
