Update eslint setup for hardhat

--- a/package.json
+++ b/package.json
@@ -26,14 +26,19 @@
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.6",
     "@types/react": "17.0.34",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "autoprefixer": "^10.4.0",
     "chai": "^4.3.4",
-    "eslint": "7",
+    "eslint": "<8.0.0",
     "eslint-config-next": "12.0.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "hardhat": "^2.6.7",
     "hardhat-gas-reporter": "^1.0.4",
     "next-transpile-modules": "^9.0.0",
     "postcss": "^8.3.11",
+    "prettier": "^2.4.1",
     "solidity-coverage": "^0.7.17",
     "tailwindcss": "^2.2.19",
     "ts-node": "^10.4.0",
